# bitcoin-p2p-handshake

./: .gitignore  Cargo.toml  LICENSE  README.md
bitcoin/: Cargo.toml
bitcoin/src/: lib.rs  message_type.rs  verack.rs  version.rs
config_files/: localhost_listener.yaml  localhost_sender.yaml  mainnet.yaml  testnet.yaml
src/: config.rs  main.rs
src/listener/: mod.rs
src/sender/: mod.rs
