[package]
name = "bitcoin-p2p"
version = "0.1.0"
edition = "2021"
description = "Bitcoin p2p node (hanshake only)"
authors = ["Mateo Cid <mateo.c.r@outlook.com>"]

[workspace]
members = [
    "bitcoin",
]

[dependencies]
bitcoin = { path = "bitcoin" }
clap = { version = "4.4.4", features = ["derive"]}
dashmap = "5.5.3"
futures = "0.3"
getset = "0.1"
serde = { version = "1.0.159", features = ["derive"] }
thiserror = "1.0.48"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_yaml = "0.9.29"
