[package]
name = "bitcoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
chrono = "0.4"
derive_builder = "0.12.0"
getset = "0.1"
rand = "0.8"
sha2 = "0.10.7"
strum = "0.25.0"
strum_macros = "0.25.3"
thiserror = "1.0.48"
